# so_long_MacOS

./: .gitignore  CMakeLists.txt  Makefile  README.md  notes  so_long
assets/: open-exit.xpm  toxic-river.xpm
includes/: macros.h  so_long.h
libft/: Makefile  ft_atoi.c  ft_bzero.c  ft_calloc.c  ft_hex.c  ft_isalnum.c  ft_isalpha.c  ft_isascii.c  ft_isdigit.c  ft_isprint.c  ft_itoa.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_memmove.c  ft_memset.c  ft_print_string.c  ft_printf.c  ft_putchar.c  ft_putchar_fd.c  ft_putendl_fd.c  ft_putnbr.c  ft_putnbr_fd.c  ft_putstr_fd.c  ft_so_putchar.c  ft_split.c  ft_strchr.c  ft_strdup.c  ft_striteri.c  ft_strjoin.c  ft_strlcat.c  ft_strlcpy.c  ft_strlen.c  ft_strmapi.c  ft_strncmp.c  ft_strnstr.c  ft_strrchr.c  ft_strtrim.c  ft_substr.c  ft_tolower.c  (+5 more)
maps/: classic.ber  map_0.ber  map_0_invalid.ber  map_1.ber  map_1_invalid.ber  map_2.ber  map_2_invalid.ber  map_3.ber  map_3_invalid.ber  map_4_invalid.ber  map_5_invalid.ber  map_big_1.ber  map_cilindre.ber  min.ber
minilibx-linux/: mlx_int.h
src/: apuntesMLX.txt  controles.txt  exit_free.c  flood_fill.txt  game.c  graphics.c  handle_errors.c  init_game.c  init_players.c  init_structs.c  main.c  map.extension.c  map_extensions.c  map_init.c  map_items.c  print_functions.c  sprites_player.c  tests.c  ç
textures/: collectible.xpm  exit.xpm  wall.xpm
